crates/ruff_python_parser/tests/snapshots/invalid_syntax@decorator_non_toplevel_call_expression_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/decorator_non_toplevel_call_expression_py38.py
---
## AST

```
Module(
    ModModule {
        range: 0..73,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 45..72,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 45..57,
                            expression: Call(
                                ExprCall {
                                    range: 46..57,
                                    func: Attribute(
                                        ExprAttribute {
                                            range: 46..55,
                                            value: Call(
                                                ExprCall {
                                                    range: 46..51,
                                                    func: Name(
                                                        ExprName {
                                                            range: 46..49,
                                                            id: Name("foo"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    arguments: Arguments {
                                                        range: 49..51,
                                                        args: [],
                                                        keywords: [],
                                                    },
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("bar"),
                                                range: 52..55,
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: Arguments {
                                        range: 55..57,
                                        args: [],
                                        keywords: [],
                                    },
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("baz"),
                        range: 62..65,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 65..67,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 69..72,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 69..72,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target-version": "3.8" }
2 | @foo().bar()
  |  ^^^^^ Syntax Error: Cannot use a call expression in a decorator on Python 3.8 unless it is the top-level expression or it occurs in the argument list of a top-level call expression (relaxed decorator syntax was added in Python 3.9)
3 | def baz(): ...
  |
